--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+        <a href="#">docomo光</a>
+        <a href="#">auひかり</a>
+        <a href="#">SoftBank光</a>
       </div>
     </div>
   </header>
