--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
       <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
       <div class="btn-wrapper">
-        <a href="#">docomo光</a>
+        <a href="#" class="btn docomo">docomo光</a>
         <p>or</p>
-        <a href="#"></span>auひかり</a>
-        <a href="#"></span>SoftBank光</a>
+        <a href="#" class="btn au"></span>auひかり</a>
+        <a href="#" class="btn SoftBank"></span>SoftBank光</a>
       </div>
     </div>
   </div>
