--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#" class="btn docomo">docomo光</a>
         <a href="#" class="btn au"></span>auひかり</a>
         <a href="#" class="btn SoftBank"></span>SoftBank光</a>
-        <a href="#" class="btn FLET'S"></span>フレッツ光</a>
+        <a href="#" class="btn FLETS"></span>フレッツ光</a>
       </div>
     </div>
   </div>
