--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <h1>アンケート</h1>
+      <p>インターネット回線は利用してますか？</p>
+      <div class="btn-wrapper">
+        <a href="#" class="btn docomo">はい</a>
+        <a href="#" class="btn docomo">いいえ</a>
+      </div>
+      <br>
+      <p>また利用してる場合どれを利用してますか？</p>
       <div class="btn-wrapper">
         <a href="#" class="btn docomo">docomo光</a>
         <a href="#" class="btn au"></span>auひかり</a>
