--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <div class="message-wrapper">
     <div class="container">
       <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
-        <h3>Let's learn to code, learn to be creative!</h3>
+        <h2>情報に間違いありませんか?</h2>
+        <h3>問題なければ情報を全てまとめます</h3>
       </div>
       <span class="btn message">次へ進む</span>
     </div>
