--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <h1>アンケート</h1>
       <p>インターネット回線は利用してますか？</p>
       <div class="btn-wrapper">
+        <input type="radio" />　はい
+        <input type="radio" />　いいえ
         <a href="#" class="btn docomo">はい</a>
         <a href="#" class="btn docomo">いいえ</a>
       </div>
