--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
       <div class="btn-wrapper">
         <input type="radio" name="ネット" value="はい" />　はい
         <input type="radio" name="ネット" value="いいえ" />　いいえ
-        <a href="#" class="btn docomo">はい</a>
-        <a href="#" class="btn docomo">いいえ</a>
       </div>
       <br>
       <p>また利用してる場合どれを利用してますか？</p>
       <div class="btn-wrapper">
-        <a href="#" class="btn docomo">docomo光</a>
-        <a href="#" class="btn au"></span>auひかり</a>
+        <a href="#" class="btn docomo" name="回線" value="docomo光" >docomo光</a>
+        <a href="#" class="btn au" name"回線" value="auひかり" ></span>auひかり</a>
         <a href="#" class="btn SoftBank"></span>SoftBank光</a>
         <a href="#" class="btn FLETS"></span>フレッツ光</a>
       </div>
