--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <br>
       <p>また利用してる場合どれを利用してますか？</p>
       <div class="btn-wrapper">
-        <input type="radio" name="回線" value="はい" />　はい
-        <input type="radio" name="回線" value="いいえ" />　いいえ
+        <input type="radio" name="回線" value="docomo光" />　docomo光
+        <input type="radio" name="回線" value="auひかり" />　auひかり
         <a href="#" class="btn docomo" name="回線" value="docomo光" >docomo光</a>
         <a href="#" class="btn au" name"回線" value="auひかり" ></span>auひかり</a>
         <a href="#" class="btn SoftBank"></span>SoftBank光</a>
