--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
       <div class="btn-wrapper">
         <input type="radio" name="回線" value="docomo光" />　docomo光
         <input type="radio" name="回線" value="auひかり" />　auひかり
-        <a href="#" class="btn docomo" name="回線" value="docomo光" >docomo光</a>
-        <a href="#" class="btn au" name"回線" value="auひかり" ></span>auひかり</a>
-        <a href="#" class="btn SoftBank"></span>SoftBank光</a>
-        <a href="#" class="btn FLETS"></span>フレッツ光</a>
+        <input type="radio" name="回線" value="SoftBank光" />　SoftBank光
+        <input type="radio" name="回線" value="フレッツ光" />　フレッツ光
       </div>
     </div>
   </div>
