--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <input type="radio" name="回線" value="auひかり" />　auひかり
         <input type="radio" name="回線" value="SoftBank光" />　SoftBank光
         <input type="radio" name="回線" value="フレッツ光" />　フレッツ光
+        <br>
+        <input type="radio" name="回線" value="OCN光" />　OCN光
+        <input type="radio" name="回線" value="JCOM光" />　JCOM光
+        <input type="radio" name="回線" value="NURO光" />　NURO光
+        <input type="radio" name="回線" value="その他" />　その他
       </div>
     </div>
   </div>
