--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <input type="radio" name="回線" value="JCOM光" />　JCOM光
         <input type="radio" name="回線" value="NURO光" />　NURO光
         <input type="radio" name="回線" value="その他" />　その他
+        <br>
+        <p>戸建てですか？集合住宅ですか？</p>
+      <div class="btn-wrapper">
+        <input type="radio" name="家" value="戸建て" />　戸建て
+        <input type="radio" name="家" value="集合住宅" />　集合住宅
+      </div>
       </div>
     </div>
   </div>
